# RL_task_framework

./: README.md  RL_params_guidelines.yaml
skills_arbitrator/: CMakeLists.txt  package.xml
skills_arbitrator/include/skills_arbitrator/: skills_arbit.h
skills_arbitrator/src/: skills_arbit_node.cpp
skills_arbitrator/src/skills_arbitrator/: skills_arbit.cpp
skills_arbitrator_msgs/: CMakeLists.txt  package.xml
skills_executer/: CMakeLists.txt  package.xml  skills_info
skills_executer/include/skills_executer/: bt_skills_classes.h  bt_to_skills_exec_bridge.h  skills_exec.h
skills_executer/src/: TF_publisher_node.cpp  move_in_tool.py  skills_exec_node.cpp
skills_executer/src/skills_executer/: bt_skills_classes.cpp  bt_to_skills_exec_bridge.cpp  skills_exec.cpp
skills_executer_msgs/: CMakeLists.txt
skills_executer_msgs/srv/: RobotSkillExecution.srv
skills_learning/: CMakeLists.txt  package.xml
skills_learning/include/skills_learning/: skills_learn.h
skills_learning/src/: skills_learn_node.cpp
skills_learning/src/skills_learning/: skills_learn.cpp
skills_learning_msgs/: CMakeLists.txt  package.xml
skills_learning_msgs/srv/: SkillExplore.srv  SkillLearning.srv
skills_util/: CMakeLists.txt  package.xml
skills_util/include/skills_util/: bt_exec.h  bt_skills_classes.h  configurations_bridge.h  log.h  util_functions.h
skills_util/launch/: bt_server.launch  skills_servers.launch
skills_util/src/: TF_publisher.py  TF_publisher_node.cpp  auto_control_configs_generator.py  bt_exec_node.cpp  configurations_bridge_node.cpp  param_mongo_utils.py
skills_util/src/skills_util/: bt_exec.cpp  bt_skills_classes.cpp  configurations_bridge.cpp  log.cpp  util_functions.cpp
skills_util_msgs/: CMakeLists.txt  package.xml
skills_util_msgs/srv/: ChangeConfig.srv  RunTree.srv
