<?xml version="1.0"?>
<package format="2">
  <name>skills_learning_msgs</name>
  <version>0.0.0</version>
  <description>The skills_learning_msgs package</description>

  <maintainer email="gauss@todo.todo">gauss</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>

  <export>

  </export>
</package>
