<?xml version="1.0"?>
<package format="2">
  <name>skills_util</name>
  <version>0.0.0</version>
  <description>The skills_util package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="gauss@todo.todo">gauss</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>rosparam_utilities</depend>
  <depend>skills_executer_msgs</depend>
  <depend>skills_arbitrator_msgs</depend>
  <depend>skills_learning_msgs</depend>
  <depend>skills_util_msgs</depend>
  <depend>configuration_msgs</depend>
  <depend>behaviortree_cpp</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
