<?xml version="1.0"?>
<package format="2">
  <name>skills_util_msgs</name>
  <version>0.0.0</version>
  <description>The skills_util_msgs package</description>

  <maintainer email="gauss@todo.todo">gauss</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
